Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23738

Typing in cmake target selection window no longer searches

    XMLWordPrintable

Details

    • Linux/Wayland
    • 2fea24fe6a63cded685bfac16c44e9b48413a635

    Description

      In previous version of QtCreator, typing in target selection list in Project->Build wouldsearch. This made navigating large list easy.

      It doesn't work now. I have to scroll trough a list of 100+ targets to fins the one I'm looking for.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              hunger Tobias Hunger
              maciej.gajewski Maciej Gajewski
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes