src/plugins/cmakeprojectmanager/cmakebuildstep.h
@@ -47,9 +47,9 @@ public:
 
     CMakeBuildConfiguration *cmakeBuildConfiguration() const;
 
-    QString buildTarget() const;
+    QStringList buildTargets() const;
     bool buildsBuildTarget(const QString &target) const;
-    void setBuildTarget(const QString &target);
+    void setBuildTargets(const QStringList &target);
 
     QString cmakeArguments() const;
     void setCMakeArguments(const QString &list);
@@ -69,7 +69,7 @@ public:
     static QStringList specialTargets();
 
 signals:
-    void targetToBuildChanged();
+    void targetsToBuildChanged();
     void buildTargetsChanged();
 
 protected:
@@ -94,14 +94,14 @@ private:
     void runImpl();
     void handleProjectWasParsed(bool success);
 
-    void handleBuildTargetChanges(bool success);
+    void handleBuildTargetsChanges(bool success);
 
     QMetaObject::Connection m_runTrigger;
 
     QRegExp m_percentProgress;
     QRegExp m_ninjaProgress;
     QString m_ninjaProgressString;
-    QString m_buildTarget;
+    QStringList m_buildTargets;
     QString m_cmakeArguments;
     QString m_toolArguments;
     bool m_useNinja = false;
